# openenv-customer-support

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  project_analysis.md  push_to_hf.py  pyproject.toml  requirements.txt  tasks.json  verify_env.py  verify_tasks.py
app/: env.py  grader.py  main.py
backend/: env.py  grader.py  main.py  models.py  requirements.txt  tasks.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
openenv_customer_support.egg-info/: PKG-INFO  SOURCES.txt
scripts/: baseline_run.py  inference.py  pre-validation.sh  test_enhanced_env.py  test_env.py  validate-submission.sh
server/: __init__.py  app.py  env.py  grader.py  models.py  tasks.py
static/: index.html
